--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -27,8 +27,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
+    "ngx-cookie-service": "^18.0.0",
     "primeicons": "^7.0.0",
-    "primeng": "^17.17.0",
+    "primeng": "^17.18.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
